--- a/WeddingApp/package.json
+++ b/WeddingApp/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
@@ -23,10 +24,12 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
