--- a/WeddingApp/package.json
+++ b/WeddingApp/package.json
@@ -12,22 +12,28 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
+    "domutils": "^3.1.0",
     "expo": "~50.0.14",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
+    "mime": "^4.0.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-counters": "^1.3.0",
+    "react-native-debugger": "^1.1.0",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
