--- a/WeddingApp/package.json
+++ b/WeddingApp/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "domutils": "^3.1.0",
     "expo": "~50.0.14",
     "expo-image-picker": "^14.7.1",
