--- a/WeddingApp/package.json
+++ b/WeddingApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.11",
     "domutils": "^3.1.0",
     "expo": "^51.0.1",
